fix: Apply hidden overflow to body

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,25 @@
+:root {
+  --primary: #0000003b;
+  --secondary: #00000017;
+  --tertiary: #00000017;
+  --exploded: 0;
+  --start-x: -28;
+  --start-y: -28;
+
+  --base:              #04ff00;
+  --bg-blend:          multiply;
+  --blur:              0px;
+  --fg-blend:          lighten;
+  --foreground:        #0000008c;
+  --opacity:           .8;
+  --spacing:           10px;
+
+  --shadowAlpha_1 : 19px;
+  --shadowAlpha_2 : 38px;
+  
+  --showLogo: 0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +27,5 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  overflow: hidden;
 }
